crates/edifact-rs-derive/tests/ui/fail_qualifier_without_segment.stderr
error: #[edifact(qualifier = ...)] / #[edifact(qualifier_from = ...)] require #[edifact(segment = ...)]
  --> tests/ui/fail_qualifier_without_segment.rs:15:11
   |
15 | #[edifact(qualifier = "MS")]
   |           ^^^^^^^^^
